--- a/modules/grids/config/locales/crowdin/js-zh-CN.yml
+++ b/modules/grids/config/locales/crowdin/js-zh-CN.yml
@@ -61,3 +61,5 @@ zh-CN:
         work_packages_overview:
           title: '工作包概览'
           placeholder: '点击以编辑…'
+        inbox:
+          title: '待办'
