--- a/modules/grids/config/locales/js-en.yml
+++ b/modules/grids/config/locales/js-en.yml
@@ -64,3 +64,5 @@ en:
         work_packages_overview:
           title: 'Work packages overview'
           placeholder: 'Click to edit ...'
+        inbox:
+          title: 'Inbox'
