--- a/config/locales/crowdin/zh-CN.yml
+++ b/config/locales/crowdin/zh-CN.yml
@@ -500,6 +500,7 @@ zh-CN:
         begin_deletion: "开始删除"
         children: "子元素"
         done_ratio: "进度 (%)"
+        duration: "工期"
         end_insertion: "结束插入"
         end_deletion: "结束删除"
         version: "版本"
