--- a/config/locales/crowdin/js-zh-CN.yml
+++ b/config/locales/crowdin/js-zh-CN.yml
@@ -49,7 +49,7 @@ zh-CN:
     close_popup_title: "关闭弹出窗口"
     close_filter_title: "关闭过滤器"
     close_form_title: "关闭表单"
-    button_add_watcher: "添加关注者"
+    button_add_watcher: "添加参与者"
     button_add: "添加"
     button_back: "返回"
     button_back_to_list_view: "返回列表视图"
@@ -63,7 +63,7 @@ zh-CN:
     button_copy: "复制"
     button_custom-fields: "自定义字段"
     button_delete: "删除"
-    button_delete_watcher: "删除关注人"
+    button_delete_watcher: "删除参与人"
     button_details_view: "详细信息视图"
     button_duplicate: "复制"
     button_edit: "编辑"
@@ -297,6 +297,7 @@ zh-CN:
               new_features_html: >
                 该版本包含多种新增功能和改进：<br> <ul class="%{list_styling_class}"> <li>通知中心：减少您的邮件接收量。取而代之，您可以在一个中心场所查找所有相关通知并采取行动。</li> <li>现在，您也可以下载所有上传的 IFC 文件。</li> <li>IFC 的上传和处理速度更快，并会收到更好的错误消息。</li> <li><a href="https://github.com/opf/openproject-revit-add-in">OpenProject Revit 插件</a>修复了许多错误。</li> </ul>
     label_activate: "激活"
+    label_assignee: "指定"
     label_add_column_after: "之后添加列"
     label_add_column_before: "在之前添加列"
     label_add_columns: "增添列"
@@ -412,7 +413,7 @@ zh-CN:
     label_repository_plural: "代码库"
     label_save_as: "另存为"
     label_select_project: "选择一个项目"
-    label_select_watcher: "选择一位关注者..."
+    label_select_watcher: "选择一位参与者..."
     label_selected_filter_list: "所选的筛选器"
     label_show_attributes: "显示所有属性"
     label_show_in_menu: "在菜单中显示视图"
@@ -445,13 +446,13 @@ zh-CN:
     label_work_package: "工作包"
     label_work_package_parent: "父工作包"
     label_work_package_plural: "进度表"
-    label_watch: "关注"
-    label_watch_work_package: "关注工作包"
-    label_watcher_added_successfully: "已成功添加的关注者 ！"
-    label_watcher_deleted_successfully: "已成功删除关注者！"
+    label_watch: "参与"
+    label_watch_work_package: "参与工作包"
+    label_watcher_added_successfully: "已成功添加的参与者 ！"
+    label_watcher_deleted_successfully: "已成功删除参与者！"
     label_work_package_details_you_are_here: "您在 %{type} %{subject} 的 %{tab} 选项卡。"
-    label_unwatch: "取消关注"
-    label_unwatch_work_package: "取消工作包关注"
+    label_unwatch: "取消参与"
+    label_unwatch_work_package: "取消工作包参与"
     label_uploaded_by: "上传者"
     label_default_queries: "默认视图"
     label_starred_queries: "收藏夹视图"
@@ -467,7 +468,7 @@ zh-CN:
     label_add_attachments: "添加附件"
     label_formattable_attachment_hint: "将文件拖拽到此区域或从剪贴板粘贴以附加文件"
     label_remove_file: "删除 %{fileName}"
-    label_remove_watcher: "删除关注者 %{name}"
+    label_remove_watcher: "删除参与者 %{name}"
     label_remove_all_files: 删除所有文件
     label_add_description: "为%{file} 添加说明"
     label_upload_notification: "正在上传文件…"
@@ -520,9 +521,10 @@ zh-CN:
       no_unread: "没有未读通知"
       reasons:
         mentioned: '被提及'
-        watched: '已关注'
+        watched: '已参与'
         assigned: '已分配'
         responsible: '负责'
+        dateAlert: '日期预警'
       date_alerts:
         milestone_date: 'Milestone date'
         overdue: '逾期'
@@ -561,7 +563,9 @@ zh-CN:
         by_reason: '参与'
         inbox: '收件箱'
         mentioned: '@被提及'
-        watching: '关注中'
+        watching: '参与中'
+        watched: '参与中'
+        date_alert: '日期预警'
       settings:
         change_notification_settings: '要查看和更改您的通知设置，请<a target="_blank" href="%{url}">点击此处</a>'
         title: "通知设置"
@@ -573,7 +577,7 @@ zh-CN:
           involved:
             title: '分配给我或负责'
             description: '针对我具有指定人或负责人身份的工作包接收所有活动通知'
-          watched: '关注项更新'
+          watched: '参与项更新'
           work_package_commented: '所有新评论'
           work_package_created: '新工作包'
           work_package_processed: '所有状态变更'
@@ -680,12 +684,12 @@ zh-CN:
     two_factor_authentication:
       label_two_factor_authentication: '双重身份验证'
     watchers:
-      label_loading: 正在加载关注人...
-      label_error_loading: 加载关注人时出错
-      label_search_watchers: 搜索关注人
-      label_add: 添加关注人
+      label_loading: 正在加载参与人...
+      label_error_loading: 加载参与人时出错
+      label_search_watchers: 搜索参与人
+      label_add: 添加参与人
       label_discard: 放弃选择
-      typeahead_placeholder: 查找可能的关注人
+      typeahead_placeholder: 查找可能的参与人
     relation_labels:
       parent: "父"
       children: "子类"
@@ -1004,7 +1008,7 @@ zh-CN:
         overview: 概述
         activity: 活动
         relations: 关系
-        watchers: 关注人
+        watchers: 参与人
         attachments: 附件
         files: 文件
       time_relative:
