--- a/modules/grids/config/locales/crowdin/js-zh-CN.yml
+++ b/modules/grids/config/locales/crowdin/js-zh-CN.yml
@@ -51,7 +51,7 @@ zh-CN:
         work_packages_created:
           title: '我创建的工作包'
         work_packages_watched:
-          title: '我关注的工作包'
+          title: '我参与的工作包'
         work_packages_table:
           title: '工作包表'
         work_packages_graph:
