部分操作符号汉化

--- a/config/locales/crowdin/zh-CN.yml
+++ b/config/locales/crowdin/zh-CN.yml
@@ -1648,6 +1648,10 @@ zh-CN:
   label_not_contains: "不包含"
   label_not_equals: "不是"
   label_on: "于"
+  label_operator_all: "不为空"
+  label_operator_none: "空"
+  label_operator_equals_or: "是 (或)"
+  label_operator_equals_all: "是 (且)"
   label_open_menu: "打开菜单"
   label_open_work_packages: "打开"
   label_open_work_packages_plural: "打开"
