新增部分语言翻译

--- a/config/locales/crowdin/js-zh-CN.yml
+++ b/config/locales/crowdin/js-zh-CN.yml
@@ -525,6 +525,14 @@ zh-CN:
         assigned: '已分配'
         responsible: '负责'
         dateAlert: '日期预警'
+        created: '新工作包'
+        scheduled: '日期变更'
+        commented: '新评论'
+        processed: '状态变更'
+        prioritized: '优先级变更'
+        date_alert_start_date: '开始时间'
+        date_alert_due_date: '完成时间'
+        subscribed: '所有'
       date_alerts:
         milestone_date: 'Milestone date'
         overdue: '逾期'
