--- a/modules/documents/config/locales/crowdin/zh-CN.yml
+++ b/modules/documents/config/locales/crowdin/zh-CN.yml
@@ -23,6 +23,9 @@ zh-CN:
   activerecord:
     models:
       document: "文档"
+  activity:
+    filter:
+      document: "文档"
   default_doc_category_tech: "技术文档"
   default_doc_category_user: "用户文档"
   enumeration_doc_categories: "文档类别"
