修改部分翻译

--- a/config/locales/crowdin/js-zh-CN.yml
+++ b/config/locales/crowdin/js-zh-CN.yml
@@ -598,8 +598,8 @@ zh-CN:
             title: '分配给我或负责'
             description: '针对我具有指定人或负责人身份的工作包接收所有活动通知'
           watched: '参与项更新'
-          assignee: '指定'
-          responsible: '负责'
+          assignee: '被设为指定人'
+          responsible: '被设为负责人'
           work_package_commented: '所有新评论'
           work_package_created: '新工作包'
           work_package_processed: '所有状态变更'
