修复天华项目资料字段更新错误

--- a/modules/th_projects/config/locales/crowdin/zh-CN.yml
+++ b/modules/th_projects/config/locales/crowdin/zh-CN.yml
@@ -47,4 +47,5 @@ zh-CN:
       models:
         project_profile:
           attributes:
-            has_existed: "已经存在"
+            code:
+              has_existed: "已经存在"
