--- a/modules/th_projects/config/locales/en.yml
+++ b/modules/th_projects/config/locales/en.yml
@@ -47,4 +47,5 @@ en:
       models:
         project_profile:
           attributes:
-            has_existed: "has existed"
+            code:
+              has_existed: "has existed"
