项目首页添加天华项目资料字段

--- a/modules/th_projects/config/locales/crowdin/zh-CN.yml
+++ b/modules/th_projects/config/locales/crowdin/zh-CN.yml
@@ -39,7 +39,7 @@ zh-CN:
         name: "天华项目名称"
         code: "天华项目编号"
         doc_link: "天华项目文档链接"
-        type_id_list:
+        type_list:
           1: "设计总包项目 - 总项目"
           2: "设计总包项目 - 分包项目"
           3: "普通项目"
