新加项目时间轴页面

--- a/modules/th_projects/config/locales/crowdin/js-zh-CN.yml
+++ b/modules/th_projects/config/locales/crowdin/js-zh-CN.yml
@@ -1,6 +1,7 @@
 # Chinese strings go here
 zh-CN:
   js:
+    label_project_timeline_plural: "时间轴"
     th_projects:
       project_profile:
         type_list:
