--- a/modules/th_projects/config/locales/en.yml
+++ b/modules/th_projects/config/locales/en.yml
@@ -31,6 +31,7 @@ en:
   project_module_th_projects: "Project Profile"
   permission_view_th_projects: "View Project Profile"
   permission_edit_th_projects: "Edit Project Profile"
+  label_project_timeline_plural: "Timeline"
 
   activerecord:
     attributes:
