--- a/modules/th_projects/config/locales/crowdin/zh-CN.yml
+++ b/modules/th_projects/config/locales/crowdin/zh-CN.yml
@@ -31,6 +31,8 @@ zh-CN:
   project_module_th_projects: "项目资料"
   permission_view_th_projects: "查看项目资料"
   permission_edit_th_projects: "修改项目资料"
+  project_module_th_project_timelines: "项目时间轴"
+  permission_view_th_project_timelines: "查看项目时间轴"
   label_project_timeline_plural: "时间轴"
 
   activerecord:
