--- a/modules/th_projects/config/locales/en.yml
+++ b/modules/th_projects/config/locales/en.yml
@@ -31,6 +31,8 @@ en:
   project_module_th_projects: "Project Profile"
   permission_view_th_projects: "View Project Profile"
   permission_edit_th_projects: "Edit Project Profile"
+  project_module_th_project_timelines: "Project Timeline"
+  permission_view_th_project_timelines: "View Project Timeline"
   label_project_timeline_plural: "Timeline"
 
   activerecord:
