--- a/config/locales/crowdin/zh-CN.yml
+++ b/config/locales/crowdin/zh-CN.yml
@@ -377,8 +377,8 @@ zh-CN:
         help_text: '帮助文本'
       auth_source:
         account: "帐户"
-        attr_firstname: "名字属性"
-        attr_lastname: "姓氏属性"
+        attr_firstname: "昵称属性"
+        attr_lastname: "姓名属性"
         attr_login: "用户名属性"
         attr_mail: "电子邮件属性"
         base_dn: "基本 DN"
@@ -858,7 +858,7 @@ zh-CN:
     due_date: "完成日期"
     estimated_hours: "估计的时间"
     estimated_time: "估计的时间"
-    firstname: "名字"
+    firstname: "昵称"
     group: "组"
     groups: "组"
     id: "ID"
@@ -867,7 +867,7 @@ zh-CN:
     public: "公开"
     #kept for backwards compatibility
     issue: "工作包"
-    lastname: "姓氏"
+    lastname: "姓名"
     login: "用户名"
     mail: "电子邮件"
     name: "名称"
@@ -2085,7 +2085,7 @@ zh-CN:
   notice_successful_create: "成功创建。"
   notice_successful_delete: "成功删除。"
   notice_successful_update: "成功更新。"
-  notice_to_many_principals_to_display: "搜索结果数量过多。\n请键入新成员 (或群组) 的名字来缩小搜索范围。"
+  notice_to_many_principals_to_display: "搜索结果数量过多。\n请键入新成员 (或群组) 的昵称来缩小搜索范围。"
   notice_user_missing_authentication_method: 用户尚未选择密码或另一种方式登录。
   notice_user_invitation_resent: 邀请已发送到 %{email}。
   present_access_key_value: "你的 %{key_name} 是: %{value}"
