将待办改为通知，开放全局通知模块

--- a/modules/inbox/config/locales/crowdin/js-zh-CN.yml
+++ b/modules/inbox/config/locales/crowdin/js-zh-CN.yml
@@ -3,6 +3,6 @@ zh-CN:
   js:
     inbox:
       create_new: 'Create new inbox'
-      title: '待办'
+      title: '通知'
       too_many: 'There are %{count} work packages in total, but only %{max} can be shown.'
       unsaved_title: 'Unnamed inbox'
