--- a/config/locales/crowdin/zh-CN.yml
+++ b/config/locales/crowdin/zh-CN.yml
@@ -2118,7 +2118,7 @@ zh-CN:
     heading_getting_started: "概览"
     text_getting_started_description: "开放项目的项目部门和合作团队概览"
     text_show_again: "您可以从帮助菜单重新启动此视频"
-    welcome: "欢迎来到 PPM"
+    welcome: "欢迎来到 %{app_title}"
     select_language: "请选择您的语言"
   permission_add_work_package_notes: "添加注释"
   permission_add_work_packages: "添加工作包"
