--- a/modules/bim/config/locales/crowdin/zh-CN.yml
+++ b/modules/bim/config/locales/crowdin/zh-CN.yml
@@ -39,19 +39,19 @@ zh-CN:
         description: "提供一个 BCF-XML v2.1 文件以导入到此项目中。您可以在执行导入之前检查其内容。"
         invalid_types_found: '找到无效的主题类型名称'
         invalid_statuses_found: '找到无效的状态名称'
-        invalid_priorities_found: '找到无效的优先级名称'
+        invalid_priorities_found: '找到无效的背景色名称'
         invalid_emails_found: '找到无效的电子邮件地址'
         unknown_emails_found: '找到未知的电子邮件地址'
         unknown_property: '未知属性'
         non_members_found: '未找到项目成员'
         import_types_as: '将所有这些类型设置为'
         import_statuses_as: '将所有这些状态设置为'
-        import_priorities_as: '将所有这些优先级设置为'
+        import_priorities_as: '将所有这些背景色设置为'
         invite_as_members_with_role: '使用以下角色邀请他们作为项目“%{project}”的成员'
         add_as_members_with_role: '使用以下角色将他们添加为项目“%{project}”的成员'
         no_type_provided: '未提供类型'
         no_status_provided: '未提供状态'
-        no_priority_provided: '未提供优先级'
+        no_priority_provided: '未提供背景色'
         perform_description: "要导入或更新上面列出的问题吗？"
         replace_with_system_user: '用“系统”用户替换他们'
         import_as_system_user: '将他们导入为“系统”用户。'
